[AMQ-8978] Clean up WARNs in activemq-unit-tests (#852)